--- a/code/weibull_library.ipynb
+++ b/code/weibull_library.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "### 플롯 출력\n",
     "\n",
-    "my_weibayes.plot(file_name=\"C:\\\\Users\\\\a00545345\\\\Desktop\\\\visual_studio_code\\\\plot_image\\\\plot_weibayes\")"
+    "my_weibayes.plot(file_name=\"C:\\\\Users\\\\plot_image\\\\plot_weibayes\")"
    ]
   },
   {
